@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; 2008 Chris Gianelloni, Andrew Gaffney
 # Distributed under the GPL v2
 
+  14 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
+  Only append unionfs_fuse stuff if UNIONFS is set
+
   14 Nov 2008; Andrew Gaffney <agaffney@gentoo.org> defaults/linuxrc,
   gen_cmdline.sh, gen_determineargs.sh, genkernel:
   Add --unionfs commandline option to enable building of unionfs-fuse Add
